--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,8 +1,8 @@
 .shop-container{
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 4fr  1fr;
 }
-.products-container{
+.product-container{
     margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
